Search Module updated

--- a/src/app/views/shared/search/search.component.html
+++ b/src/app/views/shared/search/search.component.html
@@ -1,3 +1,10 @@
-<p>
-  search works!
-</p>
+<mat-form-field class="margin-333" style="width: 100%">
+	<input 
+		matInput 
+		placeholder="Type to filter all columns" 
+		value=""
+		type="text" 
+		autocomplete="off"
+		(keyup)='updateFilter($event.target.value)'>
+</mat-form-field>
+  
