Search component logic updated

--- a/src/app/views/shared/search/search.component.html
+++ b/src/app/views/shared/search/search.component.html
@@ -5,6 +5,6 @@
 		value=""
 		type="text" 
 		autocomplete="off"
-		(keyup)='updateFilter($event.target.value)'>
+		(keyup)="updateFilter($event.target.value)">
 </mat-form-field>
   
