Datatable view updated

--- a/src/app/views/shared/datatable/datatable.component.html
+++ b/src/app/views/shared/datatable/datatable.component.html
@@ -71,7 +71,7 @@
 							<mat-icon class="text-muted">more_vert</mat-icon>
 						</button>
 						<mat-menu #msgMenu="matMenu">
-							<button mat-menu-item>Reply</button>
+							<button mat-menu-item routerLinkActive="active" routerLink="/products/config">Reply</button>
 							<button mat-menu-item>Archive</button>
 							<button mat-menu-item>Delete</button>
 						</mat-menu>
