Search component placeholder binding changed

--- a/src/app/views/shared/datatable/datatable.component.html
+++ b/src/app/views/shared/datatable/datatable.component.html
@@ -23,6 +23,7 @@
 			<!-- Filter by Columns -->
 			<app-search
 				[terms]="searchResults"
+				[placeholder]="'Search All Columns'"
 				(onFilter)="reDraw($event)">
 			</app-search>
 		</mat-toolbar>
