Placeholder property interpollation aded

--- a/src/app/views/shared/search/search.component.html
+++ b/src/app/views/shared/search/search.component.html
@@ -1,7 +1,7 @@
 <mat-form-field class="margin-333" style="width: 100%">
 	<input 
 		matInput 
-		placeholder="Search All Columns" 
+		placeholder="{{ placeholder}}" 
 		value=""
 		type="text" 
 		autocomplete="off"
