--- a/src/app/views/shared/entity-mapping/entity-mapping.component.html
+++ b/src/app/views/shared/entity-mapping/entity-mapping.component.html
@@ -5,7 +5,9 @@
 				<img src="assets/images/sq-face-220.jpg" alt="">
 			</div>
 			<div class="profile-title text-center mb-1">
-				<div class="main-title">Jhone <b>Doe</b></div>
+				<div class="main-title">Jhone
+					<b>Doe</b>
+				</div>
 				<div class="subtitle mb-05">Big Data Expert</div>
 				<div class="text-muted">Hi I'm Jhone, sit amet consectetur adipisicing elit. Aperiam repellendus nam perspiciatis.</div>
 			</div>
@@ -34,41 +36,121 @@
 		</mat-card>
 	</div>
 	<div fxFlex="100" fxFlex.gt-sm="50" fxFlex.gt-md="calc(100% - 300px)">
-		<div fxLayout="row" fxLayoutWrap="wrap">
-			<!-- mapEntity[arrNames[mapEntity.index]] -->
-			<div fxLayout="column" fxFlex="100" fxFlex.gt-md="50" *ngFor="let mapEntity of mapEntityArray">
-				<mat-card class="default">
-					<mat-card-title class="mat-bg-primary m-0">{{ mapEntity.title }}</mat-card-title>
-					<span id="{{ mapEntity.index }}" style="padding-left:12px;">
-						<mat-checkbox [(ngModel)]="mapEntity.selectToggleFlag" color="primary" 
-							(change)="toggleAll(mapEntity.index)" class="mr-1">
-							<small>All</small>
-						</mat-checkbox>
-						<span style="flex: 1 1 auto;"></span>
-						<!-- Filter array -->
-						<app-search
-							[terms]="mapEntity.tempArrElement"
-							[placeholder]="'Search'"
-							[param]="mapEntity.index"
-							(onFilter)="reloadList($event)">
-						</app-search>
-						<span style="color:#3f51b5;">{{ mapEntity.selectedTotal }} Selected</span>
-					</span>
-					<mat-card-content class="p-0" *ngIf="mapEntity.isValid">
-						<div class="list-tasktype" style="height:430px;overflow-y:scroll;">
-							<div class="tasktype-item" *ngFor="let arr of mapEntity.arrElement">
-								<mat-checkbox [(ngModel)]="arr.status" (change)="toggleEntity(mapEntity.index)" class="mr-1"></mat-checkbox>
-								<span>{{ arr.text }}</span>
-								<span fxFlex></span>
-								<span>{{ arr.status }}</span>
-							</div>
+		<mat-sidenav-container class="chat-container">
+			<!-- Left sidebar -->
+			<mat-sidenav class="chat-sidenav" #chatSidebar [opened]="isSidenavOpen" mode="side">
+				<!-- Left side topbar -->
+				<!-- <mat-toolbar color="primary" class="chat-sidebar-toolbar">
+					<a href="" class="toolbar-avatar online">
+						<img src="assets/images/face-3.jpg" alt="">
+						<span class="status-dot"></span>
+					</a>
+				</mat-toolbar> -->
+				<!-- Left side contact list -->
+				<mat-nav-list class="inbox-nav-list" role="list">
+					<mat-list-item *ngFor="let user of connectedUsers" (click)="changeActiveUser(user)">
+						<a mat-list-avatar [ngClass]="{online: user.isOnline}" class="toolbar-avatar">
+							<img [src]="user.photo" alt="">
+							<span class="status-dot"></span>
+						</a>
+						<h6 matLine>{{user.name}}</h6>
+						<p matLine class="text-muted">{{user.lastMsg}}</p>
+					</mat-list-item>
+					<mat-list-item *ngFor="let mapEntity of mapEntityArray" (click)="changeActiveUser(mapEntity)">
+						<!-- <a mat-list-avatar [ngClass]="{online: user.isOnline}" class="toolbar-avatar">
+							<img [src]="user.photo" alt="">
+							<span class="status-dot"></span>
+						</a> -->
+						<a mat-list-avatar>
+							<mat-icon>short_text</mat-icon>
+						</a>
+						<h6 matLine>{{ mapEntity.title }}</h6>
+						<p matLine class="text-muted">{{ mapEntity.selectedTotal }} Selected</p>
+					</mat-list-item>
+				</mat-nav-list>
+			</mat-sidenav>
+
+			<!-- Right side -->
+			<div class="chats-wrap">
+				<!-- Right side topbar -->
+				<mat-toolbar class="chat-toolbar mb-1">
+					<!-- sidebar toggle button -->
+					<button mat-icon-button [style.alignSelf]="'center'" class="mr-1" (click)="chatSidebar.toggle()">
+						<mat-icon>short_text</mat-icon>
+					</button>
+
+					<!-- Selected active user -->
+					<div class="active-chat-user" fxLayout="row" fxLayoutAlign="start center">
+						<a [ngClass]="{online: activeChatUser.isOnline}" class="toolbar-avatar mr-1">
+							<img [src]="activeChatUser.photo" alt="">
+							<span class="status-dot"></span>
+						</a>
+						<div fxLayout="column">
+							<h6 class="m-0 font-normal fz-1">{{activeChatUser.name}}</h6>
 						</div>
-					</mat-card-content>
-					<mat-toolbar *ngIf="!mapEntity.isValid">
-						<span style="font-size:15px;">No Matching Records Found</span>
-					</mat-toolbar>	
-				</mat-card>
+					</div>
+				</mat-toolbar>
+
+				<!-- Main chat body -->
+				<div class="conversations-hold">
+					<div fxLayout="row" fxLayoutWrap="wrap">
+						<div fxLayout="column" fxFlex="100" fxFlex.gt-md="50">
+							<mat-card class="default">
+								<!-- <mat-card-title class="mat-bg-primary m-0">{{ activeChatUser.title }}</mat-card-title> -->
+								<span id="{{ activeChatUser.index }}" style="padding-left:12px;">
+									<mat-checkbox [(ngModel)]="activeChatUser.selectToggleFlag" color="primary" (change)="toggleAll(activeChatUser.index)" class="mr-1">
+										<small>All</small>
+									</mat-checkbox>
+									<span style="flex: 1 1 auto;"></span>
+									
+									<app-search 
+										[terms]="activeChatUser.tempArrElement" 
+										[placeholder]="'Search'" 
+										[param]="activeChatUser.index" 
+										(onFilter)="reloadList($event)">
+									</app-search>
+								</span>
+								<mat-card-content class="p-0" *ngIf="activeChatUser.isValid">
+									<div class="list-tasktype" style="height:430px;overflow-y:scroll;">
+										<div class="tasktype-item" *ngFor="let arr of activeChatUser.arrElement">
+											<mat-checkbox [(ngModel)]="arr.status" (change)="toggleEntity(activeChatUser.index)" class="mr-1"></mat-checkbox>
+											<span>{{ arr.text }}</span>
+											<span fxFlex></span>
+											<span>{{ arr.status }}</span>
+										</div>
+									</div>
+								</mat-card-content>
+								<mat-toolbar *ngIf="!activeChatUser.isValid">
+									<span style="font-size:15px;">No Matching Records Found</span>
+								</mat-toolbar>
+							</mat-card>
+						</div>
+						<div fxLayout="column" fxFlex="100" fxFlex.gt-md="50">
+							<mat-card class="default">
+								<!-- <mat-card-title class="mat-bg-primary m-0">{{ mapEntity.title }}</mat-card-title> -->
+								<span style="padding-left:12px;padding-right:12px;padding-top:20px;display:flex;">
+									<!-- <mat-checkbox [(ngModel)]="mapEntity.selectToggleFlag" color="primary" (change)="toggleAll(mapEntity.index)" class="mr-1">
+										<small>All</small>
+									</mat-checkbox> -->
+									<span style="color:#3f51b5;">Total Assigned</span>
+									<span style="flex: 1 1 auto;"></span>
+									<span style="color:#3f51b5;">{{ activeChatUser.selectedTotal }} Selected</span>
+								</span>
+								<mat-card-content class="p-0" style="margin-top:5px;">
+									<div class="list-tasktype" style="height:430px;overflow-y:scroll;">
+										<div class="tasktype-item" *ngFor="let element of activeChatUser.validElements">
+											<!-- <mat-checkbox [(ngModel)]="arr.status" (change)="toggleEntity(mapEntity.index)" class="mr-1"></mat-checkbox> -->
+											<span>{{ element.text }}</span>
+											<span fxFlex></span>
+											<span>{{ element.status }}</span>
+										</div>
+									</div>
+								</mat-card-content>
+							</mat-card>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
+		</mat-sidenav-container>
 	</div>
 </div>
