OnConfiguration completion event handler added

--- a/src/app/views/product/product-add/product-add.component.html
+++ b/src/app/views/product/product-add/product-add.component.html
@@ -1,4 +1,5 @@
 <app-configuration
 	[isLinear]="isLinear"
-	[steps]="steps">
+	[steps]="steps"
+	(onConfigSubmit)=onSubmit($event)>
 </app-configuration>
