--- a/src/app/views/shared/entity-mapping/entity-mapping.component.html
+++ b/src/app/views/shared/entity-mapping/entity-mapping.component.html
@@ -1,68 +1,39 @@
 <div fxLayout="row" fxLayoutWrap="wrap">
 	<div fxFlex="100" fxFlex.gt-md="300px" fxFlex.gt-sm="50">
+		<!-- Product Portfolio -->
 		<mat-card class="profile-sidebar mb-1 pb-0">
 			<div class="propic text-center">
-				<img src="assets/images/sq-face-220.jpg" alt="">
+				<mat-icon style="font-size:75px;width:75px;">shopping_cart</mat-icon>
 			</div>
 			<div class="profile-title text-center mb-1">
 				<div class="main-title">Jhone
 					<b>Doe</b>
 				</div>
 				<div class="subtitle mb-05">Big Data Expert</div>
-				<div class="text-muted">Hi I'm Jhone, sit amet consectetur adipisicing elit. Aperiam repellendus nam perspiciatis.</div>
+				<div class="text-muted">Configure Entity mappings for seledted Item</div>
 			</div>
 			<div class="profile-actions text-center mb-1">
-				<button mat-raised-button color="primary">Message</button>
-				<button mat-raised-button color="accent">Follow</button>
+				<button mat-raised-button color="primary" 
+					(click)="onMapCompletion()">Confirm Mappings</button>
 			</div>
 			<div class="profile-nav">
-				<mat-nav-list>
-					<mat-list-item routerLink="/profile/overview" routerLinkActive="list-item-active">
-						<mat-icon>home</mat-icon>
-						Overview
-					</mat-list-item>
-					<mat-divider></mat-divider>
-					<mat-list-item routerLink="/profile/settings" routerLinkActive="list-item-active">
-						<mat-icon>settings</mat-icon>
-						Settings
-					</mat-list-item>
-					<mat-divider></mat-divider>
-					<mat-list-item routerLink="/profile/blank" routerLinkActive="list-item-active">
-						<mat-icon>content_paste</mat-icon>
-						Blank
-					</mat-list-item>
-				</mat-nav-list>
+				<!-- For later use -->
 			</div>
 		</mat-card>
 	</div>
 	<div fxFlex="100" fxFlex.gt-sm="50" fxFlex.gt-md="calc(100% - 300px)">
-		<mat-sidenav-container class="chat-container">
+		<mat-sidenav-container>
 			<!-- Left sidebar -->
-			<mat-sidenav class="chat-sidenav" #chatSidebar [opened]="isSidenavOpen" mode="side">
-				<!-- Left side topbar -->
-				<!-- <mat-toolbar color="primary" class="chat-sidebar-toolbar">
-					<a href="" class="toolbar-avatar online">
-						<img src="assets/images/face-3.jpg" alt="">
-						<span class="status-dot"></span>
-					</a>
-				</mat-toolbar> -->
-				<!-- Left side contact list -->
+			<mat-sidenav style="width:15rem;" #mappingSidebar [opened]="isSidenavOpen" mode="side">
+				<!-- Left side mapping list -->
 				<mat-nav-list class="inbox-nav-list" role="list">
-					<mat-list-item *ngFor="let user of connectedUsers" (click)="changeActiveUser(user)">
-						<a mat-list-avatar [ngClass]="{online: user.isOnline}" class="toolbar-avatar">
-							<img [src]="user.photo" alt="">
-							<span class="status-dot"></span>
-						</a>
-						<h6 matLine>{{user.name}}</h6>
-						<p matLine class="text-muted">{{user.lastMsg}}</p>
-					</mat-list-item>
-					<mat-list-item *ngFor="let mapEntity of mapEntityArray" (click)="changeActiveUser(mapEntity)">
-						<!-- <a mat-list-avatar [ngClass]="{online: user.isOnline}" class="toolbar-avatar">
-							<img [src]="user.photo" alt="">
-							<span class="status-dot"></span>
-						</a> -->
+					<mat-list-item 
+						*ngFor="let mapEntity of mapEntityArray" 
+						(click)="changeActiveUser(mapEntity)"
+						[class.selected]="currentMapping">
 						<a mat-list-avatar>
-							<mat-icon>short_text</mat-icon>
+							<mat-icon *ngIf="!mapEntity.doneSelected">remove</mat-icon>
+							<mat-icon *ngIf="mapEntity.doneSelected" color="primary">done_all</mat-icon>
 						</a>
 						<h6 matLine>{{ mapEntity.title }}</h6>
 						<p matLine class="text-muted">{{ mapEntity.selectedTotal }} Selected</p>
@@ -73,79 +44,86 @@
 			<!-- Right side -->
 			<div class="chats-wrap">
 				<!-- Right side topbar -->
-				<mat-toolbar class="chat-toolbar mb-1">
+				<mat-toolbar class="chat-toolbar">
 					<!-- sidebar toggle button -->
-					<button mat-icon-button [style.alignSelf]="'center'" class="mr-1" (click)="chatSidebar.toggle()">
-						<mat-icon>short_text</mat-icon>
+					<button mat-icon-button [style.alignSelf]="'center'" class="mr-1" (click)="mappingSidebar.toggle()">
+						<mat-icon>compare_arrows</mat-icon>
 					</button>
 
-					<!-- Selected active user -->
+					<!-- Selected Mapping Control -->
 					<div class="active-chat-user" fxLayout="row" fxLayoutAlign="start center">
-						<a [ngClass]="{online: activeChatUser.isOnline}" class="toolbar-avatar mr-1">
-							<img [src]="activeChatUser.photo" alt="">
-							<span class="status-dot"></span>
-						</a>
 						<div fxLayout="column">
-							<h6 class="m-0 font-normal fz-1">{{activeChatUser.name}}</h6>
+							<h6 class="m-0 font-normal fz-1">{{ currentMapping.title }}</h6>
 						</div>
 					</div>
+					<span style="flex: 1 1 auto;"></span>
+					<!-- To save current map control as completed -->
+					<button mat-icon-button color="accent" 
+						[style.alignSelf]="'center'" class="mr-1" 
+						(click)="currentMappingCompleted(currentMapping)">
+						<mat-icon>done</mat-icon>
+					</button>
 				</mat-toolbar>
 
-				<!-- Main chat body -->
+				<!-- Main Mapping View -->
 				<div class="conversations-hold">
 					<div fxLayout="row" fxLayoutWrap="wrap">
 						<div fxLayout="column" fxFlex="100" fxFlex.gt-md="50">
 							<mat-card class="default">
-								<!-- <mat-card-title class="mat-bg-primary m-0">{{ activeChatUser.title }}</mat-card-title> -->
-								<span id="{{ activeChatUser.index }}" style="padding-left:12px;">
-									<mat-checkbox [(ngModel)]="activeChatUser.selectToggleFlag" color="primary" (change)="toggleAll(activeChatUser.index)" class="mr-1">
+								<span id="{{ currentMapping.index }}" style="padding-left:12px;">
+									<mat-checkbox 
+										color="primary" class="mr-1"
+										[(ngModel)]="currentMapping.selectToggleFlag" 
+										(change)="toggleAll(currentMapping.index)">
 										<small>All</small>
 									</mat-checkbox>
 									<span style="flex: 1 1 auto;"></span>
-									
+									<!-- Search current list -->
 									<app-search 
-										[terms]="activeChatUser.tempArrElement" 
+										[terms]="currentMapping.tempArrElement" 
 										[placeholder]="'Search'" 
-										[param]="activeChatUser.index" 
+										[param]="currentMapping.index" 
 										(onFilter)="reloadList($event)">
 									</app-search>
 								</span>
-								<mat-card-content class="p-0" *ngIf="activeChatUser.isValid">
+								<!-- List of Entites to be mapped -->
+								<mat-card-content class="p-0" *ngIf="currentMapping.isValid">
 									<div class="list-tasktype" style="height:430px;overflow-y:scroll;">
-										<div class="tasktype-item" *ngFor="let arr of activeChatUser.arrElement">
-											<mat-checkbox [(ngModel)]="arr.status" (change)="toggleEntity(activeChatUser.index)" class="mr-1"></mat-checkbox>
+										<div class="tasktype-item" *ngFor="let arr of currentMapping.arrElement">
+											<mat-checkbox 
+												[(ngModel)]="arr.status" class="mr-1"
+												(change)="toggleEntity(currentMapping.index)"></mat-checkbox>
 											<span>{{ arr.text }}</span>
 											<span fxFlex></span>
 											<span>{{ arr.status }}</span>
 										</div>
 									</div>
 								</mat-card-content>
-								<mat-toolbar *ngIf="!activeChatUser.isValid">
+								<mat-toolbar *ngIf="!currentMapping.isValid">
 									<span style="font-size:15px;">No Matching Records Found</span>
 								</mat-toolbar>
 							</mat-card>
 						</div>
 						<div fxLayout="column" fxFlex="100" fxFlex.gt-md="50">
+							<!-- To display list of already mapped entities -->
 							<mat-card class="default">
-								<!-- <mat-card-title class="mat-bg-primary m-0">{{ mapEntity.title }}</mat-card-title> -->
 								<span style="padding-left:12px;padding-right:12px;padding-top:20px;display:flex;">
-									<!-- <mat-checkbox [(ngModel)]="mapEntity.selectToggleFlag" color="primary" (change)="toggleAll(mapEntity.index)" class="mr-1">
-										<small>All</small>
-									</mat-checkbox> -->
 									<span style="color:#3f51b5;">Total Assigned</span>
-									<span style="flex: 1 1 auto;"></span>
-									<span style="color:#3f51b5;">{{ activeChatUser.selectedTotal }} Selected</span>
+									<span fxFlex></span>
+									<span style="color:#3f51b5;">{{ currentMapping.selectedTotal }} Selected</span>
 								</span>
-								<mat-card-content class="p-0" style="margin-top:5px;">
+								<mat-card-content class="p-0" style="margin-top:5px;"  *ngIf="currentMapping.validElements.length > 0">
 									<div class="list-tasktype" style="height:430px;overflow-y:scroll;">
-										<div class="tasktype-item" *ngFor="let element of activeChatUser.validElements">
-											<!-- <mat-checkbox [(ngModel)]="arr.status" (change)="toggleEntity(mapEntity.index)" class="mr-1"></mat-checkbox> -->
+										<div class="tasktype-item" *ngFor="let element of currentMapping.validElements">
 											<span>{{ element.text }}</span>
 											<span fxFlex></span>
 											<span>{{ element.status }}</span>
 										</div>
 									</div>
 								</mat-card-content>
+								<mat-toolbar *ngIf="currentMapping.validElements.length == 0">
+									<span style="font-size:15px;">No Records Mapped</span>
+								</mat-toolbar>
 							</mat-card>
 						</div>
 					</div>
