--- a/src/app/views/product/product-edit/product-edit.component.html
+++ b/src/app/views/product/product-edit/product-edit.component.html
@@ -1,3 +1,6 @@
-<p>
-  product-edit works!
-</p>
+<app-configuration
+	[isEdit]="isEdit"
+	[isLinear]="isLinear"
+	[steps]="steps"
+	(onConfigSubmit)=onSubmit($event)>
+</app-configuration>
