Checkbox which was bound to stepper control is made hidden and edit functioonality trigger flag added to the component

--- a/src/app/views/shared/configuration/configuration.component.html
+++ b/src/app/views/shared/configuration/configuration.component.html
@@ -1,7 +1,11 @@
 <mat-card class="p-0">
 	<form [formGroup]="configForm">
-		<mat-horizontal-stepper formArrayName="formConfigArray" [linear]="!isLinear">
-			<mat-step 
+		<mat-horizontal-stepper 
+			#configStepper
+			formArrayName="formConfigArray" 
+			[linear]="isLinear">
+
+			<mat-step
 				*ngFor="let step of steps"
 				[formGroupName]="step.order - 1" 
 				[stepControl]="formConfigArray?.get([step.order - 1])"
@@ -10,6 +14,7 @@
 
 				<app-dynamic-step-form
 					*ngSwitchCase="'form'"
+					[isEdit]="isEdit"
 					[isLinear]="isLinear"
 					[stepOrder]="step.order"
 					[formElements]="step.formElements"
@@ -18,6 +23,7 @@
 
 				<app-entity-mapping
 					*ngSwitchCase="'mapping'"
+					[isEdit]="isEdit"
 					[stepOrder]="step.order"
 					[arrayElements]="step.arrayElements"
 					(onMappingCompletion)="unlockStep($event)">
@@ -27,8 +33,7 @@
 					<button *ngIf="step.order != 1" mat-button matStepperPrevious>Back</button>
 					<button mat-button matStepperNext>Next</button>
 					<span style="flex: 1 1 auto;"></span>
-					<mat-checkbox 
-						style="padding-top:10px;pointer-events:none;color:rgba(0,0,0,.38);"
+					<mat-checkbox hidden
 						[formControlName]="step.order" 
 						[(ngModel)]="configEntity[step.order]['isCompleted']">
 						Status
@@ -43,6 +48,7 @@
 					<button (click)="onSumit()" mat-button>Done</button>
 				</div>
 			</mat-step>
+
 		</mat-horizontal-stepper>
 	</form>
 </mat-card>
