Fynamic stepper form input value property binding settings changed

--- a/src/app/views/shared/dynamic-step-form/dynamic-step-form.component.html
+++ b/src/app/views/shared/dynamic-step-form/dynamic-step-form.component.html
@@ -1,6 +1,6 @@
 <mat-card class="p-0">
 	<form [formGroup]="form">
-		<mat-horizontal-stepper *ngIf="entity" formArrayName="formArray" [linear]="!isLinear">
+		<mat-horizontal-stepper *ngIf="entity" formArrayName="formArray" [linear]="isLinear">
 			
 			<!-- Form step -->
 			<mat-step 
@@ -19,7 +19,7 @@
 						[formControlName]="formElement.key" 
 						[id]="formElement.key" 
 						[type]="formElement.type"
-						[value]=formElement.value 
+						[value]="formElement.value"
 						[required]="formElement.required"
 						[(ngModel)]="entity[formElement['key']]">
 					<mat-error>This field is required</mat-error>
